# AUC-UCMS

./: .gitignore  AdminCourseView.cpp  AdminCourseView.h  AdminCourseView.ui  AdminEventView.cpp  AdminEventView.h  AdminEventView.ui  CMakeLists.txt  Events.csv  README.md  StudentCourseView.cpp  StudentCourseView.h  StudentCourseView.ui  StudentEventView.cpp  StudentEventView.h  StudentEventView.ui  activity.cpp  activity.h  activityrepository.cpp  activityrepository.h  admin.cpp  admin.h  admin_page.cpp  admin_page.h  admin_page.ui  adminloginpage.cpp  adminloginpage.h  adminloginpage.ui  adminmanageprerequisites.cpp  adminmanageprerequisites.h  adminmanageprerequisites.ui  admins-info.csv  app.cpp  app.h  auc-ucms.pro  auc-ucms.pro.user.580b7f9  authenticationrepository.cpp  authenticationrepository.h  course.cpp  course.h  (+47 more)
headers/: admin.h  email.h  event.h  student.h  user.h  utils.h
sources/: admin.cpp  email.cpp  event.cpp  student.cpp  user.cpp  utils.cpp
